--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Portafolio — Camilo (kmiloxd)</title>
+  <title>Portafolio — Kamilo (kmiloxd)</title>
   <meta name="description" content="Portafolio de Camilo — Tecnólogo en Análisis y Desarrollo de Software | Proyectos, habilidades y contacto." />
 
   <!-- Google Font -->
@@ -160,7 +160,7 @@
       <a class="brand" href="#">
         <div class="logo">KM</div>
         <div>
-          <div style="font-weight:700">Camilo <span style="color:var(--muted);font-weight:600">kmiloxd</span></div>
+          <div style="font-weight:700">Kamilo <span style="color:var(--muted);font-weight:600">kmiloxd</span></div>
           <div style="font-size:12px;color:var(--muted);margin-top:2px">Tecnólogo ADSO · Desarrollador web</div>
         </div>
       </a>
