--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
           <div class="badge">Node.js</div>
           <div class="badge">MongoDB</div>
           <div class="badge">Git</div>
+          <div class="badge">StarUML</div>
         </div>
 
         <div style="margin-top:14px;width:100%;display:flex;gap:8px">
@@ -278,41 +279,12 @@
           <h3>Gestor de Novedades FPI</h3>
           <p>App móvil para gestionar novedades en la formación profesional integral (React Native + Expo Router).</p>
           <div class="meta">
-            <div class="chip">React Native</div>
+            <div class="chip">Django + Postgresql</div>
             <div style="display:flex;gap:8px">
-              <button class="ghost" onclick="openModal('Gestor de Novedades FPI','App mobile con autenticación, roles y notificaciones. Backend en Node/Express. Repositorio: https://github.com/kmiloxd/proyecto-fpi')">Detalles</button>
-              <a class="btn" href="https://github.com/kmiloxd/proyecto-fpi" target="_blank">GitHub</a>
+              <a class="btn" href="https://news-management.onrender.com" target="_blank">Ver</a>
             </div>
           </div>
         </article>
-
-        <!-- Project 2 -->
-        <article class="project">
-          <h3>Softverse - Microempresa Web</h3>
-          <p>Landing corporativa con diseño responsivo, animaciones suaves y CMS básico.</p>
-          <div class="meta">
-            <div class="chip">React · Tailwind</div>
-            <div style="display:flex;gap:8px">
-              <button class="ghost" onclick="openModal('Softverse','Landing corporativa con CMS y secciones administrables. Demo en Vercel.')">Detalles</button>
-              <a class="btn" href="https://github.com/kmiloxd/softverse" target="_blank">GitHub</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project 3 -->
-        <article class="project">
-          <h3>Admin Parkings (UI)</h3>
-          <p>Panel de administración para parqueaderos: CRUD, filtros, paginación y diseño inspirado en Figma.</p>
-          <div class="meta">
-            <div class="chip">React · Axios</div>
-            <div style="display:flex;gap:8px">
-              <button class="ghost" onclick="openModal('Admin Parkings','UI para administrar parqueaderos con botones de acción, filtros y modales. Repositorio con components y estilos.')">Detalles</button>
-              <a class="btn" href="https://github.com/kmiloxd/admin-parkings" target="_blank">GitHub</a>
-            </div>
-          </div>
-        </article>
-      </div>
-    </section>
 
     <!-- TECHNOLOGIES -->
     <section id="tecnologias" class="hero-card">
@@ -324,48 +296,13 @@
         <div class="tech">JavaScript</div>
         <div class="tech">React</div>
         <div class="tech">React Native</div>
-        <div class="tech">Node.js</div>
-        <div class="tech">Express</div>
         <div class="tech">MongoDB</div>
         <div class="tech">Git</div>
         <div class="tech">Figma</div>
-        <div class="tech">Vercel</div>
         <div class="tech">Postman</div>
       </div>
     </section>
 
-    <!-- CONTACT -->
-    <section id="contacto">
-      <div class="section-title"><h2>Contacto</h2><div style="color:var(--muted);font-size:13px">Hablemos sobre tu proyecto</div></div>
-
-      <div class="grid contact-grid">
-        <form class="contact-card" onsubmit="handleContact(event)">
-          <div style="font-weight:700;margin-bottom:8px">Envíame un mensaje</div>
-          <input type="text" id="name" placeholder="Tu nombre" required />
-          <input type="email" id="email" placeholder="Tu correo" required />
-          <textarea id="message" rows="5" placeholder="Breve descripción del proyecto" required></textarea>
-          <div style="display:flex;gap:8px;align-items:center">
-            <button class="btn" type="submit">Enviar mensaje</button>
-            <div class="small-muted">o escribe a <a href="mailto:kmiloxd@example.com" style="color:var(--accent2);text-decoration:none">kmiloxd@example.com</a></div>
-          </div>
-        </form>
-
-        <aside class="contact-card">
-          <div style="font-weight:700">Conecta conmigo</div>
-          <p class="small-muted">Encuéntrame en GitHub, LinkedIn o envíame un correo. También puedo compartir mi CV en PDF si lo solicitas.</p>
-
-          <div style="display:flex;flex-direction:column;gap:8px;margin-top:12px">
-            <a class="ghost" href="https://github.com/kmiloxd" target="_blank">GitHub</a>
-            <a class="ghost" href="#" target="_blank">LinkedIn</a>
-            <a class="ghost" href="mailto:kmiloxd@example.com">Enviar correo</a>
-          </div>
-
-          <div style="height:14px"></div>
-          <div class="small-muted">Ubicación</div>
-          <div style="margin-top:6px">Colombia · Disponible para proyectos remotos</div>
-        </aside>
-      </div>
-    </section>
 
     <footer>
       © <span id="year"></span> Camilo — kmiloxd · Hecho con ♥ · <span class="small-muted">Diseño inspirado en layouts modernos</span>
