--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Portafolio — Kamilo (kmiloxd)</title>
+  <title>Portafolio — Camilo (kmiloxd)</title>
   <meta name="description" content="Portafolio de Camilo — Tecnólogo en Análisis y Desarrollo de Software | Proyectos, habilidades y contacto." />
 
   <!-- Google Font -->
@@ -285,6 +285,7 @@
             </div>
           </div>
         </article>
+      </div>
 
     <!-- TECHNOLOGIES -->
     <section id="tecnologias" class="hero-card">
@@ -305,7 +306,7 @@
 
 
     <footer>
-      © <span id="year"></span> Camilo — kmiloxd · Hecho con ♥ · <span class="small-muted">Diseño inspirado en layouts modernos</span>
+      © <span id="year"></span> Kamilo — kmiloxd · Hecho con ♥ · <span class="small-muted">Diseño inspirado en layouts modernos</span>
     </footer>
   </main>
 
