--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Portafolio — Camilo (kmiloxd)</title>
-  <meta name="description" content="Portafolio de Camilo — Tecnólogo en Análisis y Desarrollo de Software | Proyectos, habilidades y contacto." />
+  <title>Portafolio — Kamilo (kmiloxd)</title>
+  <meta name="description" content="Portafolio de Kamilo — Tecnólogo en Análisis y Desarrollo de Software | Proyectos, habilidades y contacto." />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -172,7 +172,6 @@
           <li><a href="#sobre">Sobre mí</a></li>
           <li><a href="#proyectos">Proyectos</a></li>
           <li><a href="#tecnologias">Tecnologías</a></li>
-          <li><a href="#contacto">Contacto</a></li>
         </ul>
       </nav>
       <div style="display:flex;gap:10px;align-items:center">
@@ -211,7 +210,7 @@
       <aside class="profile-card">
         <div class="avatar">KM</div>
         <div style="text-align:center;margin-top:8px">
-          <div style="font-weight:700">Camilo "kmiloxd"</div>
+          <div style="font-weight:700">Kamilo "kmiloxd"</div>
           <div class="small">Desarrollador — React / React Native / Node</div>
         </div>
 
@@ -286,7 +285,8 @@
           </div>
         </article>
       </div>
-
+    </section>
+    
     <!-- TECHNOLOGIES -->
     <section id="tecnologias" class="hero-card">
       <div class="section-title"><h2>Tecnologías y herramientas</h2><div style="color:var(--muted);font-size:13px">Stacks que uso</div></div>
@@ -294,6 +294,8 @@
       <div class="grid tech-grid">
         <div class="tech">HTML</div>
         <div class="tech">CSS</div>
+        <div class="tech">PHP</div>
+        <div class="tech">Phthon</div>
         <div class="tech">JavaScript</div>
         <div class="tech">React</div>
         <div class="tech">React Native</div>
@@ -368,7 +370,7 @@
     function downloadResume(e){
       e.preventDefault();
       // Si tienes un CV en tu repo, coloca la URL real. Aquí un ejemplo que apunta a GitHub.
-      window.open('https://github.com/kmiloxd/kmiloxd/raw/main/CV-Camilo.pdf', '_blank');
+      window.open('https://github.com/kmiloxd/kmiloxd/raw/main/CV-Kamilo.pdf', '_blank');
     }
 
     // Scrollspy: highlight nav items
