--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       color:white;font-weight:700;cursor:pointer;text-decoration:none;
       box-shadow: 0 8px 24px rgba(3,7,35,0.6);
     }
-    .ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);font-weight:600;padding:10px 12px;border-radius:12px;text-decoration:none}
+    .ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);font-weight:600;padding:10px 12px;border-radius:12px;text-decoration:none;margin: 8px;}
 
     /* Card right */
     .profile-card{padding:18px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.015), transparent);display:flex;gap:12px;align-items:center;flex-direction:column}
@@ -118,16 +118,6 @@
     /* Tools/Techs */
     .tech-grid{grid-template-columns:repeat(6,1fr)}
     .tech{padding:12px;border-radius:10px;text-align:center;background:linear-gradient(180deg, rgba(255,255,255,0.01), transparent);}
-
-    /* Contact */
-    .contact-grid{grid-template-columns:1fr 380px}
-    .contact-card{padding:18px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.01), transparent);}
-
-    input, textarea{
-      width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);
-      background:transparent;color:inherit;font-size:14px;outline:none;margin-bottom:10px;
-    }
-    .small-muted{font-size:13px;color:var(--muted)}
 
     footer{margin-top:40px;color:var(--muted);text-align:center;font-size:13px}
 
