--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     html,body{height:100%}
     body{
       margin:0;
-      background: linear-gradient(180deg, #061022 0%, #071428 40%, #071a2a 100%);
+      background: linear-gradient(180deg, #061022 0%, #071428 10%, #071a2a 100%);
       color:#e6eef8;
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
@@ -191,7 +191,7 @@
           </div>
           <div style="text-align:right">
             <a class="ghost" href="https://github.com/kmiloxd" target="_blank" rel="noopener">Ver mi GitHub</a>
-            <div style="height:8px"></div>
+            <div style="height:25px"></div>
             <a class="ghost" href="#" onclick="downloadResume(event)">Descargar CV</a>
           </div>
         </div>
@@ -214,8 +214,7 @@
         </div>
 
         <div style="margin-top:14px;width:100%;display:flex;gap:8px">
-          <a class="btn" href="#contacto" style="flex:1">Contrátame</a>
-          <a class="ghost" href="https://github.com/kmiloxd" target="_blank" style="flex:1">GitHub</a>
+          <a class="btn" href="https://github.com/kmiloxd" target="_blank" style="flex:1">GitHub</a>
         </div>
       </aside>
     </div>
