--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     html,body{height:100%}
     body{
       margin:0;
-      background: linear-gradient(180deg, #061022 0%, #071428 10%, #071a2a 100%);
+      background: linear-gradient(180deg, #061022 0%, #071428 1%, #071a2a 100%);
       color:#e6eef8;
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
@@ -175,9 +175,9 @@
     <!-- HERO -->
     <div class="hero">
       <div class="hero-card">
-        <div class="eyebrow">Hola 👋 SoyKamilo</div>
+        <div class="eyebrow">Hola 👋 Soy Kamilo</div>
         <h1>Desarrollador web & móvil — Tecnólogo ADSO</h1>
-        <p class="lead">Construyo interfaces limpias y aplicaciones funcionales. Me gusta React, React Native, Node.js y enseñar lo que aprendo.</p>
+        <p class="lead">Construyo interfaces limpias y aplicaciones funcionales.</p>
 
         <div class="cta-row">
           <a class="btn glow" href="#proyectos">Mis proyectos</a>
