--- a/index.html
+++ b/index.html
@@ -181,7 +181,6 @@
 
         <div class="cta-row">
           <a class="btn glow" href="#proyectos">Mis proyectos</a>
-          <a class="ghost" href="#contacto">Contacto</a>
         </div>
 
         <div style="display:flex;gap:18px;margin-top:18px;align-items:center;">
@@ -214,7 +213,7 @@
         </div>
 
         <div style="margin-top:14px;width:100%;display:flex;gap:8px">
-          <a class="btn" href="https://github.com/kmiloxd" target="_blank" style="flex:1">GitHub</a>
+          <a class="btn" href="https://github.com/kmiloxd" target="_blank" style="flex:0">GitHub</a>
         </div>
       </aside>
     </div>
@@ -239,7 +238,7 @@
           <div class="small-muted">Certificaciones</div>
           <div style="display:flex;flex-direction:column;gap:8px">
             <div class="badge">SENA — Tecnólogo ADSO</div>
-            <div class="badge">Curso React — Platzi / Udemy</div>
+            <div class="badge">SENA - Tecnico Software</div>
           </div>
 
           <div style="height:10px"></div>
@@ -258,14 +257,13 @@
     <section id="proyectos">
       <div class="section-title">
         <h2>Proyectos</h2>
-        <div style="color:var(--muted);font-size:13px">Algunos proyectos destacados</div>
       </div>
 
       <div class="grid projects-grid">
         <!-- Project 1 -->
         <article class="project">
           <h3>Gestor de Novedades FPI</h3>
-          <p>App móvil para gestionar novedades en la formación profesional integral (React Native + Expo Router).</p>
+          <p>App móvil para gestionar novedades en la formación profesional integral</p>
           <div class="meta">
             <div class="chip">Django + Postgresql</div>
             <div style="display:flex;gap:8px">
