--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portafolio — Kamilo (kmiloxd)</title>
   <meta name="description" content="Portafolio de Kamilo — Tecnólogo en Análisis y Desarrollo de Software | Proyectos, habilidades y contacto." />
 
-  <!-- Google Font -->
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
@@ -14,8 +14,8 @@
       --bg:#0f1724;
       --card:#0b1220;
       --muted:#94a3b8;
-      --accent1:#7c3aed; /* violeta */
-      --accent2:#0284c7; /* azul */
+      --accent1:#7c3aed;
+      --accent2:#0284c7;
       --glass: rgba(255,255,255,0.04);
       --glass-2: rgba(255,255,255,0.03);
       --radius: 14px;
@@ -27,7 +27,7 @@
     html,body{height:100%}
     body{
       margin:0;
-      background: linear-gradient(180deg, #061022 0%, #071428 1%, #071a2a 100%);
+      background: linear-gradient(180deg, #061022 0%, #071428 40%, #071a2a 100%);
       color:#e6eef8;
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
@@ -35,10 +35,10 @@
       padding-bottom:80px;
     }
 
-    /* Container */
+
     .container{max-width:1100px;margin:0 auto;padding:28px;}
 
-    /* NAV */
+
     header{
       position:sticky;top:12px;z-index:40;
       backdrop-filter: blur(6px);
@@ -60,14 +60,12 @@
     nav a{color:var(--muted);text-decoration:none;padding:8px 10px;border-radius:10px;font-weight:600;font-size:14px}
     nav a.active, nav a:hover{color:white;background:var(--glass);}
 
-    /* Mobile nav */
     .menu-btn{display:none;border:0;background:transparent;color:var(--muted);font-weight:700}
     @media (max-width:820px){
       nav ul{display:none}
       .menu-btn{display:inline-block}
     }
 
-    /* HERO */
     .hero{
       display:grid;grid-template-columns:1fr 420px;gap:28px;align-items:center;margin-top:18px;
     }
@@ -87,7 +85,7 @@
     }
     .ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);font-weight:600;padding:10px 12px;border-radius:12px;text-decoration:none;margin: 8px;}
 
-    /* Card right */
+
     .profile-card{padding:18px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.015), transparent);display:flex;gap:12px;align-items:center;flex-direction:column}
     .avatar{
       width:120px;height:120px;border-radius:16px;background:linear-gradient(160deg,var(--accent2),var(--accent1));display:grid;place-items:center;font-size:36px;color:white;font-weight:800;box-shadow:0 8px 30px rgba(3,7,35,0.6)
@@ -96,13 +94,13 @@
     .skill-badges{display:flex;flex-wrap:wrap;gap:8px;margin-top:12px}
     .badge{padding:8px 10px;border-radius:10px;background:var(--glass-2);color:var(--muted);font-weight:600;font-size:13px}
 
-    /* SECTIONS */
+ 
     section{margin-top:28px}
     .section-title{display:flex;align-items:center;gap:12px;margin-bottom:14px}
     .section-title h2{margin:0;font-size:18px}
     .grid{display:grid;gap:14px}
 
-    /* Projects */
+
     .projects-grid{grid-template-columns:repeat(3,1fr)}
     .project{
       background: linear-gradient(180deg, rgba(255,255,255,0.015), transparent);
@@ -115,13 +113,12 @@
     .project .meta{display:flex;justify-content:space-between;align-items:center;gap:8px}
     .chip{font-size:12px;padding:6px 8px;border-radius:8px;background:rgba(255,255,255,0.03);color:var(--muted);}
 
-    /* Tools/Techs */
+
     .tech-grid{grid-template-columns:repeat(6,1fr)}
     .tech{padding:12px;border-radius:10px;text-align:center;background:linear-gradient(180deg, rgba(255,255,255,0.01), transparent);}
 
     footer{margin-top:40px;color:var(--muted);text-align:center;font-size:13px}
 
-    /* Responsive */
     @media (max-width:1100px){.projects-grid{grid-template-columns:repeat(2,1fr)}}
     @media (max-width:820px){
       .hero{grid-template-columns:1fr; padding-bottom:10px}
@@ -130,11 +127,10 @@
       .contact-grid{grid-template-columns:1fr}
     }
 
-    /* tiny animations */
     .glow { transition: box-shadow .35s ease; }
     .glow:hover { box-shadow: 0 6px 30px rgba(124,58,237,0.18); }
 
-    /* Modal */
+
     .modal-backdrop{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(2,6,23,0.6);z-index:80}
     .modal{width:92%;max-width:880px;background:linear-gradient(180deg,#061423,#07132a);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.04)}
     .modal .close{float:right;background:transparent;border:0;color:var(--muted);font-weight:700;font-size:18px;cursor:pointer}
@@ -172,7 +168,7 @@
   </header>
 
   <main class="container" id="home">
-    <!-- HERO -->
+
     <div class="hero">
       <div class="hero-card">
         <div class="eyebrow">Hola 👋 Soy Kamilo</div>
@@ -229,7 +225,7 @@
 
           <ul style="margin-top:12px;color:var(--muted);line-height:1.8">
             <li><strong>Intereses:</strong> Interfaces, accesibilidad, buenas prácticas y optimización.</li>
-            <li><strong>Metodologías:</strong> GitFlow, trabajo con PRs, revisión de código y CI/CD básico.</li>
+            <li><strong>Metodologías:</strong> SCRUM - TRELLO - KANBAN</li>
             <li><strong>Objetivo:</strong> Crear productos útiles y mejorar la experiencia del usuario.</li>
           </ul>
         </div>
@@ -238,7 +234,7 @@
           <div class="small-muted">Certificaciones</div>
           <div style="display:flex;flex-direction:column;gap:8px">
             <div class="badge">SENA — Tecnólogo ADSO</div>
-            <div class="badge">SENA - Tecnico Software</div>
+            <div class="badge">SENA — Tecnico Software</div>
           </div>
 
           <div style="height:10px"></div>
@@ -248,19 +244,18 @@
             <div class="chip">Figma</div>
             <div class="chip">Postman</div>
             <div class="chip">Git / GitHub</div>
+            <div class="chip">Trello</div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- PROJECTS -->
     <section id="proyectos">
       <div class="section-title">
         <h2>Proyectos</h2>
       </div>
 
       <div class="grid projects-grid">
-        <!-- Project 1 -->
         <article class="project">
           <h3>Gestor de Novedades FPI</h3>
           <p>App móvil para gestionar novedades en la formación profesional integral</p>
@@ -274,7 +269,6 @@
       </div>
     </section>
     
-    <!-- TECHNOLOGIES -->
     <section id="tecnologias" class="hero-card">
       <div class="section-title"><h2>Tecnologías y herramientas</h2><div style="color:var(--muted);font-size:13px">Stacks que uso</div></div>
 
@@ -313,7 +307,6 @@
   </div>
 
   <script>
-    // Small helpers: menu toggle
     const menuBtn = document.getElementById('menuBtn');
     const menuList = document.getElementById('menuList');
     menuBtn && menuBtn.addEventListener('click', () => {
@@ -322,7 +315,6 @@
       menuList.style.gap = '8px';
     });
 
-    // Modal logic
     function openModal(title, body, repo){
       document.getElementById('modalTitle').textContent = title;
       document.getElementById('modalBody').textContent = body;
@@ -340,27 +332,24 @@
       backdrop.setAttribute('aria-hidden','true');
     }
 
-    // Small contact handler (demo)
     function handleContact(e){
       e.preventDefault();
       const name = document.getElementById('name').value.trim();
       const email = document.getElementById('email').value.trim();
       const msg = document.getElementById('message').value.trim();
       if(!name || !email || !msg) return alert('Completa los campos.');
-      // Simple: open mail client (replace with Formspree/EmailJS in producción)
+
       const subject = encodeURIComponent('Contacto desde portafolio - ' + name);
       const body = encodeURIComponent('Nombre: ' + name + '\\nCorreo: ' + email + '\\n\\n' + msg);
       window.location.href = `mailto:kmiloxd@example.com?subject=${subject}&body=${body}`;
     }
 
-    // Download CV demo (link to repo or file)
     function downloadResume(e){
       e.preventDefault();
-      // Si tienes un CV en tu repo, coloca la URL real. Aquí un ejemplo que apunta a GitHub.
       window.open('https://github.com/kmiloxd/kmiloxd/raw/main/CV-Kamilo.pdf', '_blank');
     }
 
-    // Scrollspy: highlight nav items
+   
     const sections = document.querySelectorAll('main section, main > .hero-card');
     const navLinks = document.querySelectorAll('nav a');
     function onScroll(){
@@ -377,10 +366,8 @@
     window.addEventListener('scroll', onScroll);
     onScroll();
 
-    // Set year
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Accessibility: close modal on ESC
     document.addEventListener('keydown', e => {
       if(e.key === 'Escape') closeModal();
     });
