--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <a class="brand" href="#">
         <div class="logo">KM</div>
         <div>
-          <div style="font-weight:700">Kamilo <span style="color:var(--muted);font-weight:600">kmiloxd</span></div>
+          <div style="font-weight:700">Kamilo Caldas</div>
           <div style="font-size:12px;color:var(--muted);margin-top:2px">Tecnólogo ADSO · Desarrollador web</div>
         </div>
       </a>
@@ -195,7 +195,7 @@
       <aside class="profile-card">
         <div class="avatar">KM</div>
         <div style="text-align:center;margin-top:8px">
-          <div style="font-weight:700">Kamilo "kmiloxd"</div>
+          <div style="font-weight:700">Kamilo Caldas</div>
           <div class="small">Desarrollador — React / React Native / Node</div>
         </div>
 
@@ -284,6 +284,7 @@
         <div class="tech">Git</div>
         <div class="tech">Figma</div>
         <div class="tech">Postman</div>
+        <div class="tech">Trello</div>        
       </div>
     </section>
 
