--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
       <aside class="profile-card">
         <div class="avatar">
-          <img src="yo.jpg" alt="Foto de Kamilo Caldas">
+          <img src="yo.jpeg" alt="Foto de Kamilo Caldas">
         </div>
         <div style="text-align:center;margin-top:8px">
           <div style="font-weight:700">Kamilo Caldas</div>
