--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      margin-bottom: 25px;
     }
 
     .hero{
@@ -367,7 +368,7 @@
 
     function downloadResume(e){
       e.preventDefault();
-      window.open('https://github.com/kmiloxd/kmiloxd/raw/main/CV-Kamilo.pdf', '_blank');
+      window.open('https://www.canva.com/design/DAG2pNS_Baw/WpkctXUPpKSG31dL5FiSYA/edit?utm_content=DAG2pNS_Baw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton', '_blank');
     }
 
    
